@@ -119,11 +119,11 @@ for opt, arg in opts:
         pass
 
 
-from TMDA import Defaults
 from TMDA import Cookie
+from TMDA import Defaults
 from TMDA import FilterParser
+from TMDA import Message
 from TMDA import Util
-
 
 import email
 import string
@@ -137,7 +137,7 @@ if filter_match:
     Util.filter_match(Defaults.FILTER_OUTGOING, recip, sender)
     sys.exit()
 
-msgout = email.message_from_file(sys.stdin)
+msgout = Message.message_from_file(sys.stdin)
 orig_msgout_as_string = msgout.as_string()
 orig_msgout_size = len(orig_msgout_as_string)
 orig_msgout_body_as_raw_string = Util.body_as_raw_string(msgout)
