@@ -1,3 +1,8 @@
+2003-02-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+        * tmda-inject (msgout): Create the message object from our own
+        Message module.
+        
 2003-02-17  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>
 
 	* tmda-check-address (main): Bugfix. Print the expired date for
