@@ -1,3 +1,7 @@
+2003-02-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* Message.py: New module.
+
 2003-01-30  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* Deliver.py (Deliver.__deliver_mbox): The UUCP-style From_ line's
